# ckws

./: CMakeLists.txt  Kws.cpp  Kws.h  Model.cpp  Model.h  README.md  build.sh  constant.h  ds_cnn.h  logging.h  lstm.h  m_ds_cnn.h  m_lstm.h  main.cpp  record.py  wav_data.h  wav_writer.cpp
includes/tensorflow-lite-android/c/: c_api_experimental.h
includes/tensorflow-lite-pc/c/: c_api.h
includes/tensorflow-lite/c/: c_api_experimental.h
libs/osx_arm64/: libtensorflowlite_c.dylib
src/: Kws.cpp  Kws.h  Model.h  m_ds_cnn.h  m_lstm.h  main.cpp  record.py  wav_writer.h
